--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 .sidenav {
-	height: 80%; /* 100% Full-height */
-	position: fixed; /* Stay in place */
-	z-index: 1; /* Stay on top */
-	bottom: 0; /* Stay at the top */
+	height: 100%;
+	position: fixed;
+	z-index: 1;
+	bottom: 0;
 	left: 0;
-	background-color: #111; /* Black*/
-	padding-top: 16px; /* Place content 60px from the top */
+	background-color: #111;
+	width: 10%;
+	/* Place content 60px from the top */
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
@@ -20,14 +21,16 @@
 }
 
 .sidenav a:hover {
-	padding: 12px 12px 12px 10px;
-	font-size: 24px;
 	color: #eeeeee;
 }
 
 .topbar {
 	background-color: #111;
-	height: 120px;
-	top: ;
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+	color: #eeeeee;
+	padding-top: 0%;
+	top: 0;
+	text-align: center;
+	width: 100%;
+	position: absolute;
+	font-family: "Comfortaa";
 }
